k8s/dev/hashicorp/vault/vault-cluster-store.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
